# accountant

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  db.py  main.py
app/api/: routes.py
app/core/: config.py
app/models/: __init__.py  entities.py
app/schemas/: __init__.py  dto.py
app/services/: __init__.py  dashboard.py  seed.py  workflows.py
tests/: test_workflows.py
